k8s/manifests/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: real-time-app
  name: real-time-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: real-time-app
  template:
    metadata:
      labels:
        app: real-time-app
    spec:
      containers:
      - image: real-time-app:latest
        name: real-time-app
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet: 
            path: /health
            port: 5000
        readinessProbe:
          httpGet: 
            path: /health
            port: 5000
