k8s/manifests/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: real-time-app
  name: real-time-app
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: real-time-app
