k8s/manifests/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: real-time-app-ingress
spec:
  rules:
  -  host: api.localhost.com
     http:
       paths:
       -  pathType: Prefix
          path: /
          backend:
            service:
              name: real-time-app
              port:
                number: 5000
